提交关于页面修改

--- a/Junior/一元二次方程/index.html
+++ b/Junior/一元二次方程/index.html
@@ -785,7 +785,7 @@
 + 一般形式：$ax^2+bx+c=0\quad(a\neq 0)$
 
 ## 解一元二次方程
-+ [配方法](https://baijiahao.baidu.com/builder/preview/s?id=1783522603677431089)
++ [配方法](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_15309227405550609620)
     + $x^2=p$
     + $(x+n)^2=p$
 + 公式法
