--- a/Junior/三角形/index.html
+++ b/Junior/三角形/index.html
@@ -809,7 +809,7 @@
 + 对角线
 + 正多边形
 ### 多边形的内角和
-+ [$n$边形内角和公式：$(n-2)\times 180°$](https://baijiahao.baidu.com/builder/preview/s?id=1752652294652812697)
++ [$n$边形内角和公式：$(n-2)\times 180°$](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_15245811676153894843)
 + 多边形的外角和等于360°
 </markmap-data></div></p>
 </article>
