--- a/Junior/几何图形初步/index.html
+++ b/Junior/几何图形初步/index.html
@@ -795,11 +795,11 @@
     + 射线
 + 相交
     + 交点
-+ [尺规作图](https://baijiahao.baidu.com/builder/preview/s?id=1789970157072287880)
-    + [作线段等于已知线段](https://baijiahao.baidu.com/builder/preview/s?id=1779108219908809402)
-    + [线段的和](https://baijiahao.baidu.com/builder/preview/s?id=1790054724382937986)
-    + [线段的差](https://baijiahao.baidu.com/builder/preview/s?id=1790054724382937986)
-    + [线段中点](https://baijiahao.baidu.com/builder/preview/s?id=1771035638139374224)
++ [尺规作图](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_7971365869643517092)
+    + [作线段等于已知线段](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_7879616797224543678)
+    + [线段的和](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_12433053445599881221)
+    + [线段的差](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_12433053445599881221)
+    + [线段中点](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_6734058118530703917)
 
 ## 角
 ### 度量单位
@@ -810,8 +810,8 @@
 + 量角器：大小比较
 + 和差运算
     + 角平分线
-        + [尺规作图](https://baijiahao.baidu.com/builder/preview/s?id=1770675289759850203)
-        + [2种尺规作图](https://baijiahao.baidu.com/builder/preview/s?id=1752098702104375475)
+        + [尺规作图](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_1575164085410206435)
+        + [2种尺规作图](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_4431448053985086042)
 ### 余角和补角
 + 余角
 + 补角
