--- a/Junior/勾股定理/index.html
+++ b/Junior/勾股定理/index.html
@@ -783,10 +783,10 @@
 
 ## 勾股定理
 + 直角三角形三边关系：斜边的平方等于两直角边的平方和
-+ [图解勾股定理](https://baijiahao.baidu.com/builder/preview/s?id=1777284340810648036)
++ [图解勾股定理](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_2547565077774993092)
 + [直观证明](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_8833723525114225055)
-+ [托勒密定理推导勾股定理](https://baijiahao.baidu.com/builder/preview/s?id=1762515943031966997)
-+ [3个等腰三角形的面积](https://baijiahao.baidu.com/builder/preview/s?id=1767762648700952864)
++ [托勒密定理推导勾股定理](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_2258924446535228840)
++ [3个等腰三角形的面积](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_670978275372119322)
 
 ## 勾股定理的逆定理
 + 三角形一边的平方等于另外两边的平方和，则三角形为直角三角形
