--- a/Junior/圆/index.html
+++ b/Junior/圆/index.html
@@ -795,15 +795,15 @@
     + 等圆
 + 垂直于弦的直径
     + 圆是轴对称图形，任何一条直径所在直线都是圆的对称轴
-    + [垂径定理：垂直于弦的直径平分弦，并且平分弦所对的两条弧](https://baijiahao.baidu.com/builder/preview/s?id=1785698597396283420)
+    + [垂径定理：垂直于弦的直径平分弦，并且平分弦所对的两条弧](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_11075868660592123611)
         + 推论：平分弦的直径垂直于弦，并且平分弦所对的两条弧
 + 弧、弦、圆心角
     + 在同圆或等圆中，相等的圆心角所对的弧相等，所对的弦也相等
     + 在同圆或等圆中，如果两条弧相等，那么它们所对的圆心角相等，所对的弦相等
     + 在同圆或等圆中，如果两条弦相等，那么它们所对的圆心角相等，所对的优弧与劣弧分别相等
 + 圆周角
-    + [圆周角定理：一条弧所对的圆周角等于它所对的圆心角的一半](https://baijiahao.baidu.com/builder/preview/s?id=1753910412602913894)
-        + [推论](https://baijiahao.baidu.com/builder/preview/s?id=1754266043225842501)
+    + [圆周角定理：一条弧所对的圆周角等于它所对的圆心角的一半](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_4348589377676143363)
+        + [推论](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_10111137908222467219)
             + 同弧或等弧所对的圆周角相等
             + 半圆(直径)所对的圆周角是直角，90°的圆周角所对的弦是直径
     + 圆内接多边形(多边形的外接圆)
@@ -824,7 +824,7 @@
             + 经过半径的外端并且垂直于该半径的直线是圆的切线
         + 切线的性质
             + 圆的切线垂直于过切点的半径
-        + [切线长定理：从圆外一点可以引圆的两条切线，它们的切线长相等，这一点和圆心的连线平分两条切线的夹角](https://baijiahao.baidu.com/builder/preview/s?id=1784611518928203798)
+        + [切线长定理：从圆外一点可以引圆的两条切线，它们的切线长相等，这一点和圆心的连线平分两条切线的夹角](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_15607658368082897518)
         + 三角形的内切圆
             + 内心
     + 相离
