--- a/Junior/整式的乘法与因式分解/index.html
+++ b/Junior/整式的乘法与因式分解/index.html
@@ -799,7 +799,7 @@
 + 多项式除以单项式
 
 ## 乘法公式
-### [平方差公式：$(a+b)(a-b)=a^2-b^2$](https://baijiahao.baidu.com/builder/preview/s?id=1770028988912062303)
+### [平方差公式：$(a+b)(a-b)=a^2-b^2$](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_15639224526841791088)
 ### 完全平方公式
 + $(a+b)^2=a^2+2ab+b^2$
     + $(a+b+c)^2=a^2+b^2+c^2+2ab+2ac+2bc$
