--- a/Junior/有理数/index.html
+++ b/Junior/有理数/index.html
@@ -808,7 +808,7 @@
 #### 乘法的运算律
 + 乘法交换律
 + 乘法结合律
-+ [乘法分配律](https://baijiahao.baidu.com/builder/preview/s?id=1777900374096169594)
++ [乘法分配律](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_9001838007834571398)
 ### 有理数的除法
 #### 除法法则
 
