--- a/Junior/相交线与平行线/index.html
+++ b/Junior/相交线与平行线/index.html
@@ -805,9 +805,9 @@
 + 公理
     + 经过直线外一点，有且只有一条直线与这条直线平行
     + 如果两条直线都与第三条直线平行，那么这两条直线也互相平行
-+ [尺规作图：过直线外一点作平行线](https://baijiahao.baidu.com/builder/preview/s?id=1780812703730128388)
-    + [方法1](https://baijiahao.baidu.com/builder/preview/s?id=1771933645609016081)
-    + [方法2](https://baijiahao.baidu.com/builder/preview/s?id=1781081721868741680)
++ [尺规作图：过直线外一点作平行线](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_986801767593775293)
+    + [方法1](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_563176177379513554)
+    + [方法2](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_5380929502026351880)
 ### 平行线的判定
 + 同位角相等，两直线平行
 + 内错角相等，两直线平行
