--- a/Junior/相似/index.html
+++ b/Junior/相似/index.html
@@ -795,14 +795,14 @@
     + 两边成比例且夹角相等的两个三角形相似
     + 两角分别相等的两个三角形相似
 + 相似三角形的性质
-    + [相似三角形对应线段的比等于相似比](https://baijiahao.baidu.com/builder/preview/s?id=1754636573589273668)
+    + [相似三角形对应线段的比等于相似比](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_9295951220492151837)
         + 对应高的比
         + 对应中线的比
         + 对应角平分线的比
     + 相似三角形面积的比等于相似比的平方
 + 相似三角形的应用举例
-    + [测量大树高度](https://baijiahao.baidu.com/builder/preview/s?id=1751081730810903762)
-    + [证明托勒密定理+勾股定理](https://baijiahao.baidu.com/builder/preview/s?id=1752999020499133989)
+    + [测量大树高度](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_1856672871571748754)
+    + [证明托勒密定理+勾股定理](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_2020963558605026727)
 
 ## 位似
 + 位似图形
