--- a/Junior/轴对称/index.html
+++ b/Junior/轴对称/index.html
@@ -793,7 +793,7 @@
 ### 线段的垂直平分线的性质
 + 线段垂直平分线上的点与这条线段两个端点的距离相等
     + 与一条线段两个端点距离相等的点，在这条线段的垂直平分线上
-+ [尺规作图：作线段的中垂线](https://baijiahao.baidu.com/builder/preview/s?id=1771035638139374224)
++ [尺规作图：作线段的中垂线](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_6734058118530703917)
 
 ## 画轴对称图形
 
@@ -813,8 +813,8 @@
 + 在直角三角形中，如果一个锐角等于30°，那么它所对的直角边等于斜边的一半
 
 ## 最短路径问题
-+ [将军饮马问题](https://baijiahao.baidu.com/builder/preview/s?id=1795040442971498326)
-+ [造桥选址问题](https://baijiahao.baidu.com/builder/preview/s?id=1794851074651158242)
++ [将军饮马问题](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_2930147399684828353)
++ [造桥选址问题](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_10412718872846269200)
 </markmap-data></div></p>
 </article>
 </section>
