--- a/Junior/锐角三角形/index.html
+++ b/Junior/锐角三角形/index.html
@@ -786,7 +786,7 @@
     + 正弦
     + 余弦
     + 正切
-        + [比例公式](https://baijiahao.baidu.com/builder/preview/s?id=1766668179765983252)
+        + [比例公式](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_6320589605761718685)
 
 ## 解直角三角形及其应用
 + 解直角三角形
@@ -794,7 +794,7 @@
     + 两锐角关系：互余
     + 边角关系
 + 应用举例
-    + [估算铁塔的塔高](https://baijiahao.baidu.com/builder/preview/s?id=1764140618940383667)
+    + [估算铁塔的塔高](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_6510122297589931651)
 </markmap-data></div></p>
 </article>
 </section>
