--- a/Master/大师启示录/index.html
+++ b/Master/大师启示录/index.html
@@ -788,7 +788,7 @@
 
 ## [素数有无穷个？](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_5228458650873922475)
 ## [最大公约数：辗转相除法](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_11863153119220784724)
-## [证明勾股定理](https://baijiahao.baidu.com/builder/preview/s?id=1777186620929185865)
+## [证明勾股定理](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_2773966127197313148)
 </markmap-data></div>
 <h2 id="_3">阿基米德</h2>
 <div class="mkdocs-markmap"><markmap-data class="language-markmap" hidden="true"># 阿基米德
@@ -798,8 +798,8 @@
 ## [穷竭法](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_17167432831246032159)
 ## [圆面积公式的论证](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_1793248076024713197)
 ## [圆周率的计算](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_8484051911331134580)
-## [三等分角：滑尺](https://baijiahao.baidu.com/builder/preview/s?id=1783347586669290648)
-## [三等分角：思路](https://baijiahao.baidu.com/builder/preview/s?id=1784000382309602453)
+## [三等分角：滑尺](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_3444687591641523250)
+## [三等分角：思路](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_571637658349491225)
 ## 计算球的体积：平衡法
 </markmap-data></div>
 <h2 id="_4">费马</h2>
@@ -816,7 +816,7 @@
 <h2 id="_6">莱布尼茨</h2>
 <div class="mkdocs-markmap"><markmap-data class="language-markmap" hidden="true"># 莱布尼茨
 
-## [巧算：三角形数倒数和](https://baijiahao.baidu.com/builder/preview/s?id=1783165307307469324)
+## [巧算：三角形数倒数和](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_12670429979956891739)
 ## 变换定理
 ## 
 </markmap-data></div>
@@ -834,13 +834,14 @@
 <div class="mkdocs-markmap"><markmap-data class="language-markmap" hidden="true"># 欧拉
 
 ## [$1+\frac{1}{2^2}+\frac{1}{3^2}+\frac{1}{4^2}+\cdots=?$](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_11896371463178201576)
-## [自然数平方的倒数和](https://baijiahao.baidu.com/builder/preview/s?id=1767693735026936990)
+## [自然数平方的倒数和](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_2428365956249632351)
 ## [四面体体积：欧拉公式](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_1928057358517082869)
 ## [哥尼斯堡七桥问题](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_5203540862814537992)
 ## [计算圆周率](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_9105155707757879841)
-## [欧拉多面体公式：$V+E-F=2$](https://baijiahao.baidu.com/builder/preview/s?id=1751646416376659443)
-## [欧拉的形式运算](https://baijiahao.baidu.com/builder/preview/s?id=1763422659921614897)
-## [欧拉公式$e^{i\pi}+1=0$的发现？](https://baijiahao.baidu.com/builder/preview/s?id=1787606865293350659)
+## [欧拉多面体公式：$V+E-F=2$](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_17126700897292570938)
+## [欧拉的形式运算](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_15181385288239012786)
+## [欧拉公式$e^{i\pi}+1=0$的发现？](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_7123311270983456575)
+## [欧拉巧算莱布尼茨级数](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_6553499974350506658)
 ## 证明广义二项式定理
 ## $e$的发现？
 ## 等周问题
@@ -848,7 +849,7 @@
 <h2 id="_10">纳皮尔</h2>
 <div class="mkdocs-markmap"><markmap-data class="language-markmap" hidden="true"># 纳皮尔
 
-## [对数的发明](https://baijiahao.baidu.com/builder/preview/s?id=1794303599751649458)
+## [对数的发明](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_3931925687810300564)
 </markmap-data></div>
 <h2 id="_11">阿贝尔</h2>
 <div class="mkdocs-markmap"><markmap-data class="language-markmap" hidden="true"># 阿贝尔
@@ -859,9 +860,9 @@
 <div class="mkdocs-markmap"><markmap-data class="language-markmap" hidden="true"># 高斯
 
 ## [直观图解：$1+2+3+4+5+6+\cdots+100=?$](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_268284352465163582)
-## [10岁高斯,巧妙求和](https://baijiahao.baidu.com/builder/preview/s?id=1783083028697774664)
+## [10岁高斯,巧妙求和](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_9554913306727629654)
 ## [尺规作图：等分圆问题](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_15881138573829703377)
-## [17等分圆](https://baijiahao.baidu.com/builder/preview/s?id=1768040149852228537)
+## [17等分圆](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_5697831197260470284)
 ## [高斯消元法，解线性方程组](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_14804383261268257838)
 ## 代数基本定理
 ## 二次互反律的证明
@@ -871,7 +872,7 @@
 
 ## [化归策略：证明均值不等式](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_4583537962502054248)
 ## [介值定理的证明思路](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_17823492958343774817)
-## [证明“欧拉多面体公式”](https://baijiahao.baidu.com/builder/preview/s?id=1753844163939406147)
+## [证明“欧拉多面体公式”](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_6999267954505259061)
 </markmap-data></div>
 <h2 id="_14">魏尔斯特拉斯</h2>
 <div class="mkdocs-markmap"><markmap-data class="language-markmap" hidden="true"># 魏尔斯特拉斯
@@ -905,7 +906,7 @@
 <h2 id="_19">克里斯托尔</h2>
 <div class="mkdocs-markmap"><markmap-data class="language-markmap" hidden="true"># 克里斯托尔
 
-## [数学归纳法：证明均值不等式](https://baijiahao.baidu.com/builder/preview/s?id=1765503361466085261)
+## [数学归纳法：证明均值不等式](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_7221254133246829676)
 </markmap-data></div>
 <h2 id="_20">康托尔</h2>
 <div class="mkdocs-markmap"><markmap-data class="language-markmap" hidden="true"># 康托尔
@@ -915,7 +916,7 @@
 <h2 id="_21">戴纳达</h2>
 <div class="mkdocs-markmap"><markmap-data class="language-markmap" hidden="true"># 戴纳达
 
-## [数学归纳法：证明均值不等式](https://baijiahao.baidu.com/builder/preview/s?id=1765582791247289147)
+## [数学归纳法：证明均值不等式](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_4405695109095052918)
 </markmap-data></div>
 <h2 id="_22">爱因斯坦</h2>
 <div class="mkdocs-markmap"><markmap-data class="language-markmap" hidden="true"># 爱因斯坦
@@ -930,7 +931,7 @@
 <h2 id="_24">波利亚</h2>
 <div class="mkdocs-markmap"><markmap-data class="language-markmap" hidden="true"># 波利亚
 
-## [重构欧拉多面体公式的发现](https://baijiahao.baidu.com/builder/preview/s?id=1752810176584364598)
+## [重构欧拉多面体公式的发现](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_8588026936093464443)
 </markmap-data></div></p>
 </article>
 </section>
