--- a/Senior/必修/三角函数/index.html
+++ b/Senior/必修/三角函数/index.html
@@ -798,7 +798,7 @@
 + 正切线
 ### 同角三角函数的基本关系式
 + $\sin^2\theta+\cos^2\theta=1$
-    + [图解3个公式](https://baijiahao.baidu.com/builder/preview/s?id=1766764499778369938)
+    + [图解3个公式](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_3159551282891489544)
 + $\tan\theta=\frac{\sin\theta}{\cos\theta}$
 ### 诱导公式
 
