--- a/Senior/必修/向量的数量积与三角恒等变换/index.html
+++ b/Senior/必修/向量的数量积与三角恒等变换/index.html
@@ -801,12 +801,12 @@
 + [和化积公式](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_8902974730646820116)
 + [向量内积,余弦积化和差](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_3851123481683106913)
 ### 两角和与差的正弦、正切
-+ [正弦和公式图解](https://baijiahao.baidu.com/builder/preview/s?id=1762982581306832667)
++ [正弦和公式图解](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_16611413921607023548)
 ### 倍角公式
 + [正(余)弦2倍角](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_3160607758373815686)
 + [正切半角](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_1459131252525793510)
 ### 辅助角公式
-+ [图解辅助角公式](https://baijiahao.baidu.com/builder/preview/s?id=1780175656582026722)
++ [图解辅助角公式](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_4984436411647121099)
 + [向量内积与叉积,推导辅助角公式](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_2831121941389803366)
 ### 三角恒等变换的应用
 </markmap-data></div></p>
