--- a/Senior/必修/等式与不等式/index.html
+++ b/Senior/必修/等式与不等式/index.html
@@ -798,7 +798,7 @@
     + 综合法
     + 反证法
     + 分析法
-    + [几何法：比例不等式](https://baijiahao.baidu.com/builder/preview/s?id=1784067937021141487)
+    + [几何法：比例不等式](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_1592320525063409856)
     + [函数法](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_17171856687868168134)
 ##### 一元二次不等式
 ##### 均值不等式
