--- a/Senior/选修/平面解析几何/index.html
+++ b/Senior/选修/平面解析几何/index.html
@@ -804,13 +804,13 @@
     + [推导1：斜截式到一般式](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_8533305946579525704)
     + [推导2：法向量+向量内积](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_17197770054882553651)
     + [推导3：面积法](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_5749974862966399938)
-    + [辅助角公式最值](https://baijiahao.baidu.com/builder/preview/s?id=1783268005896129199)
+    + [辅助角公式最值](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_2104132678707165200)
 + 对称问题
     + [点关于直线的对称点](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_11407154650624196768)
     + 函数与反函数
         + [函数图像关于$y=x$对称](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_8198727436168279078)
         + [对称的直观动画](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_18086400172999046289)
-        + [为什么对称？](https://baijiahao.baidu.com/builder/preview/s?id=1777569818330572474)
+        + [为什么对称？](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_4867519170946014097)
 
 ## [圆及其方程](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_6125791336437062207)
 ### 圆的标准方程
