--- a/University/数学分析/函数极限/index.html
+++ b/University/数学分析/函数极限/index.html
@@ -797,7 +797,7 @@
 + 柯西准则
 
 ## 两个重要的极限
-### [证明$\lim\limits_{x\to 0}\frac{\sin{x}}{x}=1$](https://baijiahao.baidu.com/builder/preview/s?id=1793135786856928580)
+### [证明$\lim\limits_{x\to 0}\frac{\sin{x}}{x}=1$](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_10047123409106616664)
 ### 证明$\lim\limits_{x\to\infty}(1+\frac{1}{x})^x=e$
 
 ## 无穷小量与无穷大量
@@ -807,7 +807,7 @@
 ### 曲线的渐近线
 
 ## 拓展
-+ [不动点的几何意义](https://baijiahao.baidu.com/builder/preview/s?id=1757697179415529020)
++ [不动点的几何意义](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_9650031979567510762)
 </markmap-data></div></p>
 </article>
 </section>
