--- a/University/数学分析/定积分/index.html
+++ b/University/数学分析/定积分/index.html
@@ -781,7 +781,7 @@
 <p><h1 id="_1">定积分</h1>
 <div class="mkdocs-markmap"><markmap-data class="language-markmap" hidden="true"># 定积分
 
-## [定积分概念](https://baijiahao.baidu.com/builder/preview/s?id=1792856728623884339)
+## [定积分概念](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_5130888464625987537)
 ### 问题提出
 ### 定积分的定义
 + 区间的分割与模
@@ -816,7 +816,7 @@
 
 ## 拓展
 + [积分变换](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_9286189933653155628)
-+ [欧拉常数有界](https://baijiahao.baidu.com/builder/preview/s?id=1793329125342951656)
++ [欧拉常数有界](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_700490035432035207)
 </markmap-data></div></p>
 </article>
 </section>
