--- a/University/数学分析/实数集与函数/index.html
+++ b/University/数学分析/实数集与函数/index.html
@@ -789,7 +789,7 @@
 ### 区间与邻域
 ### 有界集·确界原理
 
-## [函数概念](https://baijiahao.baidu.com/builder/preview/s?id=1769224628702765517)
+## [函数概念](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_13903113608247871923)
 ### 函数的定义
 ### 函数的表示法
 ### 函数的四则运算
@@ -797,7 +797,7 @@
 ### 反函数
 ### 初等函数
 
-## [具有某些特性的函数](https://baijiahao.baidu.com/builder/preview/s?id=1769596864647835779)
+## [具有某些特性的函数](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_12790772197326026600)
 ### 有界函数
 ### 单调函数
 ### 奇函数和偶函数
