--- a/University/数学分析/导数和微分/index.html
+++ b/University/数学分析/导数和微分/index.html
@@ -785,7 +785,7 @@
 ### 导数的定义
 ### 导函数
 ### 导数的几何意义
-+ [一元函数导数的几何意义](https://baijiahao.baidu.com/builder/preview/s?id=1783720204072099165)
++ [一元函数导数的几何意义](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_6187835993723497462)
 + 切线方程
 + 极值点
 + 费马定理
@@ -809,7 +809,7 @@
 ### 微分在近似计算中的应用
 
 ## 拓展
-+ [病态函数:处处连续但不可导](https://baijiahao.baidu.com/builder/preview/s?id=1756997342707040094)
++ [病态函数:处处连续但不可导](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_3919341916298905222)
 </markmap-data></div></p>
 </article>
 </section>
