--- a/University/数学分析/微分中值定理及其应用/index.html
+++ b/University/数学分析/微分中值定理及其应用/index.html
@@ -784,8 +784,8 @@
 ## 拉格朗日定理和函数的单调性
 ### 罗尔定理
 ### 拉格朗日定理及其推论
-+ [拉格朗日中值定理](https://baijiahao.baidu.com/builder/preview/s?id=1762781680981988721)
-+ [用罗尔定理,整拉格朗日中值定理](https://baijiahao.baidu.com/builder/preview/s?id=1752470146456801809)
++ [拉格朗日中值定理](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_4278019463426854591)
++ [用罗尔定理,整拉格朗日中值定理](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_5996967482662961891)
 ### 单调函数
 + 单调的充要条件
 + 达布定理
