--- a/University/数学分析/数列极限/index.html
+++ b/University/数学分析/数列极限/index.html
@@ -782,27 +782,27 @@
 <div class="mkdocs-markmap"><markmap-data class="language-markmap" hidden="true"># 数列极限
 
 ## 数列极限概念
-+ [数列极限定义](https://baijiahao.baidu.com/builder/preview/s?id=1763615307280407148)
++ [数列极限定义](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_8323489356765393782)
 
-## [收敛数列的性质](https://baijiahao.baidu.com/builder/preview/s?id=1757875753843996802)
+## [收敛数列的性质](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_1593208848730630802)
 + 唯一性
-+ [有界性](https://baijiahao.baidu.com/builder/preview/s?id=1757893297740933217)
++ [有界性](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_15439463684359580839)
 + 保号性
-+ [迫敛性](https://baijiahao.baidu.com/builder/preview/s?id=1757720830161836872)
-    + [应用:求圆面积](https://baijiahao.baidu.com/builder/preview/s?id=1757733483483625437)
-+ [极限的四则运算法则](https://baijiahao.baidu.com/builder/preview/s?id=1759876714116017245)
++ [迫敛性](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_10996498374866070164)
+    + [应用:求圆面积](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_4634258691320857081)
++ [极限的四则运算法则](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_2106809607615639902)
 
 ## 数列极限存在的条件
-+ [单调有界定理](https://baijiahao.baidu.com/builder/preview/s?id=1767230406344068970)
++ [单调有界定理](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_15439463684359580839)
 + 致密性定理
 + 柯西收敛准则
 
 ## 拓展
-+ [必须掌握的3个极限方法](https://baijiahao.baidu.com/builder/preview/s?id=1753453787172882224)
++ [必须掌握的3个极限方法](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_7063871387611280443)
 + [根据递推关系式,求极限](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_4392617050617579369)
-+ [Stolz定理](https://baijiahao.baidu.com/builder/preview/s?id=1755010164703257688)
-+ [Stolz定理的应用](https://baijiahao.baidu.com/builder/preview/s?id=1756349866480027833)
-+ [收敛数列的部分和的算术平均](https://baijiahao.baidu.com/builder/preview/s?id=1756260984720337211)
++ [Stolz定理](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_1275246867282836028)
++ [Stolz定理的应用](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_12749241817302653434)
++ [收敛数列的部分和的算术平均](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_7439510250254887442)
 </markmap-data></div></p>
 </article>
 </section>
