--- a/University/数学分析/数项级数/index.html
+++ b/University/数学分析/数项级数/index.html
@@ -804,7 +804,7 @@
 ### 阿贝尔判别法和狄利克雷判别法
 
 ## 拓展
-+ [收敛的交错级数](https://baijiahao.baidu.com/builder/preview/s?id=1756911254074676558)
++ [收敛的交错级数](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_9355277723415930843)
 + [图解阿贝尔变换](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_10008041424009448196)
 + [反比例函数,图解级数收敛](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_2075638795326204682)
 </markmap-data></div></p>
