--- a/University/线性代数/初等变换与线性方程组/index.html
+++ b/University/线性代数/初等变换与线性方程组/index.html
@@ -826,7 +826,7 @@
     + 若$A_{m\times n}B_{n\times l}=O$,则$R(A)+R(B)\leq n$
 + [矩阵秩的几何意义](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_12128545775127679969)
 
-## [线性方程组的解](https://baijiahao.baidu.com/builder/preview/s?id=1755378206693490670)
+## [线性方程组的解](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_10946391266662454165)
 + [高斯消元法](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_12753900833870218535)
 + $n$元线性方程组$Ax=b$
     + 无解的充要条件$R(A)&lt;R(A,b)$
