--- a/University/线性代数/相似矩阵与二次型/index.html
+++ b/University/线性代数/相似矩阵与二次型/index.html
@@ -803,7 +803,7 @@
 
 ## 相似矩阵
 + 相似矩阵+相似变换
-+ [矩阵相似的几何意义](https://baijiahao.baidu.com/builder/preview/s?id=1753273197795985584)
++ [矩阵相似的几何意义](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_15536690823376320599)
 + 定理：方阵$A$和$B$相似,则其特征多项式相同,特征值相等
     + 推论：若方阵与对角矩阵相似,对角矩阵的对角元素值为特征值
 + 定理：方阵能对角化的充要条件
