--- a/University/线性代数/行列式/index.html
+++ b/University/线性代数/行列式/index.html
@@ -789,22 +789,22 @@
     + 对角线法则
 
 ## 全排列和对换
-+ [排列及其逆序数](https://baijiahao.baidu.com/builder/preview/s?id=1758496631283105220)
++ [排列及其逆序数](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_8513893448135710165)
 + 对换
-    + [对换改变排列的奇偶性](https://baijiahao.baidu.com/builder/preview/s?id=1758532147332775509)
-        + [奇偶排列各占一半](https://baijiahao.baidu.com/builder/preview/s?id=1758601641020582480)
-+ [$n$级排列问题](https://baijiahao.baidu.com/builder/preview/s?id=1758621054806804855)
+    + [对换改变排列的奇偶性](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_2760433644330596722)
+        + [奇偶排列各占一半](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_6185833821190205622)
++ [$n$级排列问题](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_15525675726403922944)
 
 ## $n$阶行列式的定义
-+ [定义](https://baijiahao.baidu.com/builder/preview/s?id=1758795190781927875)
++ [定义](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_12807056538732501014)
 + 上(下)三角行列式
 + 对角行列式
 
-## [行列式的性质](https://baijiahao.baidu.com/builder/preview/s?id=1758974617067800880)
-+ [行列式与其转置行列式相等](https://baijiahao.baidu.com/builder/preview/s?id=1758872175713543212)
+## [行列式的性质](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_18027890367369716098)
++ [行列式与其转置行列式相等](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_5295876450872945922)
 + 对换行列式的两行(列),行列式变号
-    + [如果行列式的两行(列)完全相同,则此行列式等于零](https://baijiahao.baidu.com/builder/preview/s?id=1758990236734914570)
-+ [行列式的某一行(列)中所有的元素都乘同一个数$k$,等于用数$k$乘该行列式](https://baijiahao.baidu.com/builder/preview/s?id=1758881951413912492)
+    + [如果行列式的两行(列)完全相同,则此行列式等于零](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_9104603986576269310)
++ [行列式的某一行(列)中所有的元素都乘同一个数$k$,等于用数$k$乘该行列式](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_553074699912769440)
     + 行列式中某一行(列)的所有元素的公因子可以提到行列式记号的外面
 + 行列式中如果两行(列)元素成比例,该行列式等于零
 + 若行列式的某一行(列)的元素都是两数之和,则行列式等于两个行列式的和
