--- a/University/高等数学/一元函数微分/index.html
+++ b/University/高等数学/一元函数微分/index.html
@@ -788,8 +788,8 @@
     + [零点定理](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_2746499782427021911)
     + 罗尔定理
     + 拉格朗日中值定理
-        + [转化为罗尔定理](https://baijiahao.baidu.com/builder/preview/s?id=1762781680981988721)
-        + [面积法证明](https://baijiahao.baidu.com/builder/preview/s?id=1752470146456801809)
+        + [转化为罗尔定理](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_4278019463426854591)
+        + [面积法证明](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_5996967482662961891)
     + 柯西中值定理
     + 洛必达法则
     + 泰勒中值定理
