--- a/University/高等数学/定积分/index.html
+++ b/University/高等数学/定积分/index.html
@@ -781,7 +781,7 @@
 <p><h1 id="_1">定积分及其应用</h1>
 <div class="mkdocs-markmap"><markmap-data class="language-markmap" hidden="true"># 定积分及其应用
 
-## [定积分的概念](https://baijiahao.baidu.com/builder/preview/s?id=1792856728623884339)
+## [定积分的概念](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_5130888464625987537)
 + 定积分诞生的实际背景
     + 运动问题的路程计算
     + 曲边梯形的面积计算
