--- a/University/高等数学/导数与微分/index.html
+++ b/University/高等数学/导数与微分/index.html
@@ -784,11 +784,11 @@
 ## 导数与微分的基本概念
 + 基本概念
     + 导数
-        + [一元函数导数的几何意义](https://baijiahao.baidu.com/builder/preview/s?id=1783720204072099165)
+        + [一元函数导数的几何意义](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_6187835993723497462)
     + 高阶导数
     + 可微
 + 连续、可导、可微的关系
-    + [处处连续但不可微](https://baijiahao.baidu.com/builder/preview/s?id=1756997342707040094)
+    + [处处连续但不可微](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_3919341916298905222)
 
 ## 求导公式与法则
 + 求导及求微分的基本公式
