--- a/University/高等数学/极限与连续/index.html
+++ b/University/高等数学/极限与连续/index.html
@@ -782,13 +782,13 @@
 <div class="mkdocs-markmap"><markmap-data class="language-markmap" hidden="true"># 极限与连续
 
 ## 函数
-+ [基本概念](https://baijiahao.baidu.com/builder/preview/s?id=1769224628702765517)
++ [基本概念](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_13903113608247871923)
     + 函数
     + 复合函数
     + 反函数
     + 基本初等函数
     + 初等函数
-+ [函数的初等特性](https://baijiahao.baidu.com/builder/preview/s?id=1769596864647835779)
++ [函数的初等特性](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_12790772197326026600)
     + 有界性
     + 单调性
     + 奇偶性
@@ -803,23 +803,23 @@
     + 极限的定义
     + 无穷小
 + 极限性质
-    + [极限的一般性质](https://baijiahao.baidu.com/builder/preview/s?id=1757875753843996802)
+    + [极限的一般性质](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_1593208848730630802)
         + 唯一性
         + 保号性
-        + [有界性](https://baijiahao.baidu.com/builder/preview/s?id=1757893297740933217)
+        + [有界性](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_15439463684359580839)
         + 列极限与子列极限的关系
     + 极限的运算性质
-        + [四则运算性质](https://baijiahao.baidu.com/builder/preview/s?id=1759876714116017245)
+        + [四则运算性质](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_2106809607615639902)
         + 复合函数极限运算
     + 极限存在准则
-        + [迫敛定理(夹逼定理)](https://baijiahao.baidu.com/builder/preview/s?id=1757720830161836872)
-        + [单调有界定理](https://baijiahao.baidu.com/builder/preview/s?id=1767230406344068970)
+        + [迫敛定理(夹逼定理)](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_10996498374866070164)
+        + [单调有界定理](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_10372880432562864034)
     + 无穷小的性质
         + 无穷小的基本性质
         + 等价无穷小的性质
         + 常用的等价无穷小
 + 两个重要极限
-    + [$\lim_{x\to 0}\frac{\sin{x}}{x}=1$](https://baijiahao.baidu.com/builder/preview/s?id=1793135786856928580)
+    + [$\lim_{x\to 0}\frac{\sin{x}}{x}=1$](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_10047123409106616664)
     + $\lim_{x\to\infty}(1+\dfrac{1}{x})^x=e$
 
 ## 连续与间断
