--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <!-- 用MathJax渲染公式 -->
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script async="" id="MathJax-script" src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
-<script src="js/unpkg.com/d3@7.js" type="text/javascript"></script><script src="https://unpkg.com/markmap-lib@0.15.4" type="text/javascript"></script><script src="js/unpkg.com/markmap-view@0.15.4.js" type="text/javascript"></script><style type="text/css">div.mkdocs-markmap {
+<script src="js/unpkg.com/d3@7.js" type="text/javascript"></script><script src="js/unpkg.com/markmap-lib@0.15.4.js" type="text/javascript"></script><script src="js/unpkg.com/markmap-view@0.15.4.js" type="text/javascript"></script><style type="text/css">div.mkdocs-markmap {
     width: 100%;
     min-height: 1em;
     border: 1px solid grey;
