探索式简介

--- a/Discover/简介/index.html
+++ b/Discover/简介/index.html
@@ -1179,7 +1179,7 @@
                 <section class="p-md-5 section-content">
     <article>
         <p><p>学生做题，就像玩迷宫，只是这种玩法是从出发点和终点同时出发，来寻找贯通的路径。既然答案必然存在，其中必然有一致的合理性，那么需要的不过是其中的过程。这种暗示，可能也给学生一种“自信”，使得学生长期过于专注在寻找解题方法上，这就造成学生缺失了将实际问题转化为数学化表达的能力，或提出问题的能力。</p>
-<h2 id="_1">应试教育的弊端</h2>
+<h2 id="_1">传统教育的现状</h2>
 <ul>
 <li>传统的学校教育，按照教学大纲，以升学为目的（中考、高考）<ul>
 <li>学生被要求重复、机械地进行大量训练；</li>
