《高等代数》添加链接

--- a/University/简介/index.html
+++ b/University/简介/index.html
@@ -1259,7 +1259,8 @@ $$</span><script type="math/tex; mode=display">
 </ul>
 <p>数学的发现，往往是数学家通过几何直观猜测到结果，然后再补充严格的逻辑证明。数学发现如此，数学学习为何不行？教材往往通过逻辑组织，而忽略直观背景。</p>
 <p>数学中有什么直观、形象的对象？几何图形！</p>
-<h3 id="_8">几何意义</h3>
+<h3 id="_8"><a href="https://mbd.baidu.com/newspage/data/videolanding?nid=sv_8761081403005644341">几何意义</a></h3>
+<p>点击上面的标题“几何意义”，参考视频介绍！</p>
 <ul>
 <li>初学者从几何意义入手，洞察其直观背景；</li>
 <li>轻松而迅速理解和把握线性代数的基本概念和定理的几何本质；</li>
@@ -1271,7 +1272,8 @@ $$</span><script type="math/tex; mode=display">
 + 平面向量基本定理；
 + 空间向量基本定理；</p>
 <p>秩(维)、基、线性相关、坐标</p>
-<h3 id="_10">公理化</h3>
+<h3 id="_10"><a href="https://mbd.baidu.com/newspage/data/videolanding?nid=sv_7908040428493297348">公理化</a></h3>
+<p>点击上面的标题“公理化”，参考视频介绍！</p>
 <p>线性代数通过线性空间的8条，公理化。</p>
 <p>对具有线性空间共性的范畴对象，其讨论的思路统一为：基——坐标——维数——同构。</p></p>
     </article>
