--- a/University/线性代数/矩阵/index.html
+++ b/University/线性代数/矩阵/index.html
@@ -790,7 +790,7 @@
         + 单位矩阵
 
 ## 矩阵的运算
-+ 矩阵的加法
++ [矩阵的加法](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_4069915120626787635)
     + 运算律
         + 加法交换律：$A+B=B+A$
         + 加法结合律：$(A+B)+C=A+(B+C)$
