--- a/University/高等代数/欧几里得空间/index.html
+++ b/University/高等代数/欧几里得空间/index.html
@@ -795,6 +795,7 @@
 + 正交基+标准正交基
 + $n$维欧式空间的任一个正交向量组都能扩充为正交基
 + 施密特正交化方法
+    + [几何意义](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_2540410415252891866)
 + 正交矩阵
 
 ## 同构
