--- a/University/高等代数/矩阵/index.html
+++ b/University/高等代数/矩阵/index.html
@@ -782,13 +782,15 @@
 <div class="mkdocs-markmap"><markmap-data class="language-markmap" hidden="true"># 矩阵
 
 ## 矩阵概念
++ [向量间的“比率”](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_2146679273202980462)
 
 ## 矩阵的运算
 + 概念
-    + 矩阵的加法
+    + [矩阵的加法](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_4069915120626787635)
     + 零矩阵
     + 负矩阵
     + 矩阵乘法
+        + [矩阵与向量的乘法](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_2446749082814300526)
     + 单位矩阵
     + 数量乘法
         + 数量矩阵
@@ -801,6 +803,7 @@
 + 退化的+非退化的
 + 定理：矩阵乘积的值$rank(AB)\leq\min\{rank(A),rank(B)\}$
     + 推论：$A=A_1A_2\cdots A_t\Rightarrow rank(A)\leq\min\limits_{1\leq j\leq t}rank(A_j)$
++ [矩阵秩的几何意义](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_12128545775127679969)
 
 ## 矩阵的逆
 + 可逆的方阵
@@ -813,10 +816,15 @@
 ## 矩阵的分块
 + 矩阵的分块
 + 对角矩阵
+    + [对角矩阵的几何意义](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_9146374551950874101)
 + 准对角矩阵
 
 ## 初等矩阵
 + 初等矩阵
+    + 3种初等矩阵
+        + [单位矩阵交换两行](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_851209234778970101)
+        + [单位矩阵某行乘非零数](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_10150026948517047284)
+        + [单位矩阵某行乘非零的数,加到另一行](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_1996023802843206815)
     + 矩阵等价
     + 等价的性质
         + 反身性
