--- a/University/高等代数/线性变换/index.html
+++ b/University/高等代数/线性变换/index.html
@@ -783,6 +783,8 @@
 
 ## 线性变换的定义
 + 线性变换的定义
+    + [旋转变换](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_15648901529460908815)
+    + [旋转变换,推导三角函数和差公式](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_7491463490056745976)
 + 几类特殊线性变换
     + 恒等(单位)变换
     + 零变换
@@ -804,7 +806,7 @@
 + 线性变换的幂
     + 线性变换的多项式
 
-## 线性变换的矩阵
+## [线性变换的矩阵](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_10412098498583805570)
 + 定理
     + 线性变换完全被它在一组基上的作用所决定
     + 基向量的像可以是任意的
@@ -820,10 +822,12 @@
     + 利用线性变换的矩阵计算一个向量的像
     + 线性变换在两组基下的矩阵相似
     + 两个相似的矩阵，可以看作同一线性变换在两组基下对用的矩阵
+    + [矩阵相似的几何意义](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_15536690823376320599)
 
 
 ## 特征值与特征向量
 + 特征值+特征向量
+    + [特征值的几何意义](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_8766392705962254565)
 + 特征多项式
 + 确定线性变换的特征值和特征向量的3步
 + 定理：相似矩阵有相同的特征多项式
