--- a/University/高等代数/线性方程组/index.html
+++ b/University/高等代数/线性方程组/index.html
@@ -779,9 +779,9 @@
 <section class="p-md-5 section-content">
 <article>
 <p><h1 id="_1">线性方程组</h1>
-<div class="mkdocs-markmap"><markmap-data class="language-markmap" hidden="true"># 线性方程组
+<div class="mkdocs-markmap"><markmap-data class="language-markmap" hidden="true"># [线性方程组](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_10946391266662454165)
 
-## 消元法
+## [消元法](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_12753900833870218535)
 + 一般线性方程组
     + 系数
     + 常数项
@@ -793,13 +793,13 @@
 + 增广矩阵
 
 ## $n$元向量空间
-+ $n$维向量
++ [$n$维向量](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_10564763692836963532)
     + 向量相等
-    + 向量和
+    + [向量和](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_12792306439925873292)
     + 零向量+负向量
-    + 数量乘积
+    + [数量乘积](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_12792306439925873292)
     + 向量减法
-+ 向量运算律
++ [向量运算律](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_9750007219243298725)
 + 向量空间
 
 ## 线性相关性
