--- a/University/高等代数/行列式/index.html
+++ b/University/高等代数/行列式/index.html
@@ -785,22 +785,25 @@
 
 ## 排列
 + 排列
-    + 逆序+逆序数
+    + [逆序+逆序数](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_8513893448135710165)
     + 偶排列+奇排列
-+ 定理：对换改变排列的奇偶性
-    + 推论：全部的$n$级排列中,奇、偶排列各占一半
-+ 定理：任意$n$级排列都可与$12\cdots n$经一系列对换不变
++ [定理：对换改变排列的奇偶性](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_2760433644330596722)
+    + [推论：全部的$n$级排列中,奇、偶排列各占一半](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_6185833821190205622)
++ [定理：任意$n$级排列都可与$12\cdots n$经一系列对换不变](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_15525675726403922944)
 
 ## $n$级行列式
-+ $n$级行列式定义
++ [$n$级行列式定义](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_12807056538732501014)
+    + 行列式的几何意义
+        + [二阶行列式](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_6318375991954016295)
+        + [三阶行列式](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_11119587356699166233)
 + 对角形行列式
 + 行列式性质
-    + 行列互换,行列式不变
+    + [行列互换,行列式不变](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_5295876450872945922)
 
-## $n$级行列式的性质
-+ 公因子可提出
-+ 某行元素拆分为两项和
-+ 两行元素相同,行列式为零
+## [$n$级行列式的性质](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_18027890367369716098)
++ [公因子可提出](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_553074699912769440)
++ [某行元素拆分为两项和](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_553074699912769440)
++ [两行元素相同,行列式为零](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_9104603986576269310)
 + 两行成比例,行列式为零
 + 一行的倍数加到另一行,行列式不变
 + 对换两行的位置,行列式反号
@@ -810,6 +813,7 @@
     + 方阵
 + 初等行(列)变换
 + 阶梯形矩阵
++ [行列式对角化的几何意义](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_4507837944905155739)
 
 ## 行列式按一行(列)展开
 + 余子式
@@ -818,6 +822,7 @@
 
 ## 克莱默法则
 + 克莱默法则
+    + [几何意义](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_4405928455291090263)
 + 齐次线性方程组
 
 ## 拉普拉斯定理·行列式的乘法法则
@@ -825,7 +830,14 @@
     + 代数余子式
 + 引理
 + 拉普拉斯定理
-</markmap-data></div></p>
+    + [几何图解:三阶行列式](https://mbd.baidu.com/newspage/data/videolanding?nid=sv_7340811828480943753)
+</markmap-data></div>
+<h2 id="_2">拓展</h2>
+<ul>
+<li><a href="https://mbd.baidu.com/newspage/data/videolanding?nid=sv_15348222026184904191">行列式的6种计算方法</a></li>
+<li><a href="https://mbd.baidu.com/newspage/data/videolanding?nid=sv_12318224226133465706">借助三阶行列式的几何意义,推导三角形“坐标形式”的面积公式</a></li>
+<li><a href="https://mbd.baidu.com/newspage/data/videolanding?nid=sv_5474100161275214817">行列式在解析几何中的应用:表示直线、平面</a></li>
+</ul></p>
 </article>
 </section>
 <!-- endblock -->
