--- a/index.html
+++ b/index.html
@@ -871,7 +871,9 @@
 <li><strong>中间层【学习区】：适合进行高针对性练习，达成学习目的的区域。</strong></li>
 </ul>
 <p>不同学生的知识结构背景、认知能力水平、基础各不相同，因此“中间层”也不尽相同。如果基础较差，就应该侧重于教学大纲的数学课程，将基础知识掌握牢固！</p>
-<p>对于学有余力、有兴趣的学生，可酌情、量力增加课外学习。针对这里的课外拓展学习，提几点建议：</p>
+<p>各阶段的数学课程通过思维导图的形式呈现：每个节点对应一个视频链接(字体为蓝色代表可跳转链接,视频链接将会持续的补充和优化，直到将知识点全覆盖)；还将会针对各个章节，提供基础的、典型的、常用的方法。之所以采用导图，可以帮助学生梳理知识，快速检索自己对知识的掌握程度，发现薄弱的章节。</p>
+<p><strong>注意：除了作为导图节点的视频会持续的补充、优化，该网站也会持续的优化运营，力求更便利的使用</strong></p>
+<p>另外，对于学有余力、有兴趣的学生，可酌情、量力增加课外学习。针对这里的课外拓展学习，提几点建议：</p>
 <ul>
 <li>中学生可以选择《学习方法》，可以帮助学生提高成绩，而对于其他的主题，限于中学生的知识面，不能阅读、观看所有章节</li>
 <li>《大师启示录》中章节的选题和论述，尽量贴合高中生的理解，可以理解其大部分内容</li>
