--- a/index.html
+++ b/index.html
@@ -780,7 +780,7 @@
 <article>
 <p><h1 id="_1">简介</h1>
 <p>究尽数学是一个优秀的数学IP，专注于数学思想、思维、知识和方法的分享！</p>
-<p>博主毕业于<strong>哈尔滨工业大学</strong>，是个数学小硕，为学习数学的各级同学（<strong>初中、高中、大学</strong>）准备了系列的学习资料！课程以思维导图的形式展示，使得知识结构一目了然，点击相关的链接，将跳转到视频的播放页面。注意课程为付费的视频，需要在视频平台购买之后学习！</p>
+<p>博主毕业于<strong>哈尔滨工业大学</strong>，是个数学小硕，为学习数学的各级同学（<strong>初中、高中、大学</strong>）准备了系列的学习资料！课程以思维导图的形式展示，使得知识结构一目了然，点击相关的链接，将跳转到视频的播放页面(内容会持续补充、完善)。注意课程为付费的视频，需要在视频平台购买之后学习！</p>
 <h2 id="_2">数学应该学什么？</h2>
 <p>当然是各种的数学概念、定理、公式和法则等等各种知识。在这里将呈现初中、高中各年级阶段的全部课程内容；以及面向非数学专业的理工科大学生，准备了《高等数学》和《线性代数》；面向数学专业提供了《数学分析》和《高等代数》两门专业基础课。所有的课程都是精心制作的视频，具体的课程目录，请到导航页寻找！</p>
 <h3 id="_3">数学课程</h3>
@@ -871,8 +871,9 @@
 <li><strong>中间层【学习区】：适合进行高针对性练习，达成学习目的的区域。</strong></li>
 </ul>
 <p>不同学生的知识结构背景、认知能力水平、基础各不相同，因此“中间层”也不尽相同。如果基础较差，就应该侧重于教学大纲的数学课程，将基础知识掌握牢固！</p>
-<p>各阶段的数学课程通过思维导图的形式呈现：每个节点对应一个视频链接(字体为蓝色代表可跳转链接,视频链接将会持续的补充和优化，直到将知识点全覆盖)；还将会针对各个章节，提供基础的、典型的、常用的方法。之所以采用导图，可以帮助学生梳理知识，快速检索自己对知识的掌握程度，发现薄弱的章节。</p>
-<p><strong>注意：除了作为导图节点的视频会持续的补充、优化，该网站也会持续的优化运营，力求更便利的使用</strong></p>
+<p>各阶段的数学课程通过思维导图的形式呈现：每个节点对应一个视频链接(字体为<strong>蓝色代表可跳转链接</strong>,视频链接将会持续的补充和优化，直到将知识点全覆盖)；还将会针对各个章节，提供基础的、典型的、常用的方法。之所以采用导图，可以帮助学生梳理知识，快速检索自己对知识的掌握程度，发现薄弱的章节。</p>
+<pre><code>**注意：除了作为导图节点的视频会持续的补充、优化，该网站也会持续的优化运营，力求更便利的使用！**
+</code></pre>
 <p>另外，对于学有余力、有兴趣的学生，可酌情、量力增加课外学习。针对这里的课外拓展学习，提几点建议：</p>
 <ul>
 <li>中学生可以选择《学习方法》，可以帮助学生提高成绩，而对于其他的主题，限于中学生的知识面，不能阅读、观看所有章节</li>
